--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,200 @@
 /*global*/
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    
 }
 
 body {
+    width: 100%;
+    right: 100vh;
     background-color: black;
-    color: aliceblue;
-    font-family: 'Roboto', sans-serif;
-
-}
-
-/*index*/
-#indexTex {
     
-font-style: normal;
-font-weight: 400;
-font-size: 70px;
-line-height: 85px;
-display: flex;
-align-items: center;
-text-align: center;
+}
 
-color: #1CF0FA;
 
+.mainMenu {
+    display: flex;
+    height: 90vh;
+    flex-direction:column;
+    background-color: #000000;
 
 }
 
-/*abertura*/
+/*Pagina Principal*/
+
+.banner img {
+    display: flex;
+    padding: 0;
+    margin-top: 0;    
+    width: 100%;
+    justify-content:center;
+    
+    
+}
+
+.teamText {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+    padding: 10px;
+    color: #FFD403;
+    
+}
+
+.btn {
+    display: flex;
+    padding: 0px;
+    margin-top: 0;    
+    justify-content:space-around;
+    align-items: center;
+    
+}
+
+.jedi {
+    width: 250px; 
+
+}
+
+.sith {
+    width: 250px; 
+}
 
 
-/*menu*/
+.jediText {
+    font-size: 30px;
+    color: #FFD403;
+
+}
+
+.sithText {
+    font-size: 30px;
+    color:  #FFD403;
+
+}
 
 
-/*jedi*/
+/*Pagina Sith*/
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    background-color:black;
+
+}
+
+.sithlogo img {
+    width: 150px; 
+
+}
+
+.sithBanner img {
+    display: flex;
+    padding: 0;
+    margin-top: 0;    
+    width: 100%;
+    height: 200px;
+    justify-content:center;
+    border: 3px solid red;
+}
+.mainSith {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 65vh;
+    background-color: rgb(27, 11, 121);
+
+}
+
+.sithContainer {
+    width: 1800px;
+    height: 200px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+    background-color: #eeff00;
+}
+
+.sithCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    width: 300px;
+    height: 350px;
+    background-color: rgb(0, 0, 0);
+    margin: 20px;
+    border: 3px solid red;
+    border-radius: 20px;
+    overflow: hidden;
+    transition: 0.5s;
+   
+
+}
+
+.sithCard img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+    width: 250px;
+    height: 150px;
+    border-radius: 20px;
+    border: 3px solid red;
+    
+
+}
+
+.sithCard h1{
+    padding: px;
+    margin: 10px;
+    margin-top: 0;
+    text-align: center;
+    color: red;
+    width: 220px;
+    
+
+}
+
+.sithContent{
+    padding: 30px;
+    margin-top: 20px;
+    text-align: center;
+    color: red;
+    width: 250px;
+    height: 200px;
+    border-radius: 20px;
+    border: 3px solid red;
+}
 
 
-/*sith*/
+footer {
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background-color:black;
+    border: 3px solid red;
+
+}
+
+.sithLogoFooter img {
+    height: 50px;
+}
+
+
+
+
+
+
+
